--- a/avaliacoes/atividade1/atividades.html
+++ b/avaliacoes/atividade1/atividades.html
@@ -42,11 +42,11 @@
         <tr>
             <td>9:00</td>
             <td style="background-color: aquamarine;">Futebol</td>
-            <td style="background-color: rgb(127, 255, 127);">Ping Pong</td>
+            <td style="background-color: rgb(127, 255, 127);">Curso de BD</td>
             <td style="background-color: rgb(210, 252, 210);">Curso programação</td>
             <td style="background-color: aquamarine;">Futebol</td>
-            <td style="background-color: cornflowerblue;">Crossfit</td>
-            <td style="background-color: rgb(165, 255, 80)">Monitoria Calculo</td>
+            <td style="background-color: cornflowerblue;">Academia</td>
+            <td style="background-color: rgb(165, 255, 80)">Revisão</td>
             <td style="background-color: cornsilk;">Dormir</td>
         </tr>
 
